written the first draft of introduction and appendices

--- a/includes/config.tex
+++ b/includes/config.tex
@@ -32,7 +32,7 @@
 \graphicspath{{media/}}
 
 % links
-\hypersetup{colorlinks=true,urlcolor=cyan}
+\hypersetup{colorlinks=true,linkcolor=black,citecolor=black,filecolor=black,urlcolor=cyan}
 
 % code listing
 \usemintedstyle{tango}
