--- a/includes/references.bib
+++ b/includes/references.bib
@@ -1,12 +1,27 @@
-// just to get references work
+@ARTICLE{herlocker04,
+    AUTHOR    = {Herlocker, J. L. and Konstan, J. A. and Terveen, L. G. and Riedl, J. T.},
+    TITLE     = {Evaluating collaborative filtering recommender systems},
+    JOURNAL   = {ACM Transactions on Information Systems},
+    VOLUME    = {22},
+    NUMBER    = {1},
+    PAGES     = {5--53},
+    YEAR      = {2004}
+}
 
-@ARTICLE{anand03,
-    AUTHOR    = {Anand, Sarabjot Singh and Mobasher, Bamshad},
-    TITLE     = {Intelligent Techniques for Web Personalization},
-    JOURNAL   = {Proceedings of the 2003 international conference on Intelligent Techniques for Web Personalization},
-    VOLUME    = {7},
-    NUMBER    = {4},
-    PUBLISHER = {Springer Berlin Heidelberg},
-    MONTH     = oct,
-    YEAR      = {2003}
+@article{manouselis07,
+  title={Analysis and classification of multi-criteria recommender systems},
+  author={Manouselis, Nikos and Costopoulou, Constantina},
+  journal={World Wide Web},
+  volume={10},
+  number={4},
+  pages={415--441},
+  year={2007},
+  publisher={Springer}
+}
+
+@BOOK{ricci11,
+    AUTHOR    = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+    TITLE     = {Introduction to Recommender Systems Handbook},
+    PUBLISHER = {Springer US},
+    YEAR      = {2011}
 }
