--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -26,19 +26,19 @@
 
 \emph{Status: Not Started}
 
+\subsection{Dependency}
+
+\emph{Status: Not Started}
+
+\subsection{Encapsulation}
+
+\emph{Status: Not Started}
+
 \subsection{Database Abstraction}
 
 \emph{Status: Not Started}
 
 \subsection{Reusability}
-
-\emph{Status: Not Started}
-
-\subsection{Dependancy}
-
-\emph{Status: Not Started}
-
-\subsection{Encapsulation}
 
 \emph{Status: Not Started}
 
