--- a/meta/bibl.tex
+++ b/meta/bibl.tex
@@ -1,4 +1,5 @@
 \renewcommand\bibname{References}
+\renewcommand\bibsection{\section{\refname}}
 
 \small
 \begin{singlespace}
@@ -7,3 +8,4 @@
 \end{singlespace}
 
 \nocite{*}
+\pagebreak[4]
