removed teaser chapter

--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -58,14 +58,6 @@
 
 \emph{Status: Not Started}
 
-\section{Recommender Ecosystem}
-
-\emph{Status: Not Started}
-
-\subsection{Coexistence}
-
-\emph{Status: Not Started}
-
-\subsection{Cooperation}
+\section{Technological Unbiasedness}
 
 \emph{Status: Not Started}
