demoted sections to subsections in evaluation

--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -6,15 +6,15 @@
 
 \emph{Status: Not Started}
 
-\subsection{Interoperibility of the recommendation queries}
+\subsubsection{Interoperibility of the recommendation queries}
 
 \emph{Status: Not Started}
 
-\subsection{Interoperibility of the user and domain models}
+\subsubsection{Interoperibility of the user and domain models}
 
 \emph{Status: Not Started}
 
-\subsection{Interoperibility of the recommendation results}
+\subsubsection{Interoperibility of the recommendation results}
 
 \emph{Status: Not Started}
 
@@ -22,23 +22,23 @@
 
 \emph{Status: Not Started}
 
-\subsection{Complexity}
+\subsubsection{Complexity}
 
 \emph{Status: Not Started}
 
-\subsection{Dependency}
+\subsubsection{Dependency}
 
 \emph{Status: Not Started}
 
-\subsection{Encapsulation}
+\subsubsection{Encapsulation}
 
 \emph{Status: Not Started}
 
-\subsection{Database Abstraction}
+\subsubsection{Database Abstraction}
 
 \emph{Status: Not Started}
 
-\subsection{Reusability}
+\subsubsection{Reusability}
 
 \emph{Status: Not Started}
 
@@ -46,15 +46,15 @@
 
 \emph{Status: Not Started}
 
-\subsection{Integrating Applications}
+\subsubsection{Integrating Applications}
 
 \emph{Status: Not Started}
 
-\subsection{Framework}
+\subsubsection{Framework}
 
 \emph{Status: Not Started}
 
-\subsection{Recommender Engines}
+\subsubsection{Recommender Engines}
 
 \emph{Status: Not Started}
 
